顧客追加と顧客一覧を実装。

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,17 +1,30 @@
 PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
-\u524d=\u524d\u306e\u30da\u30fc\u30b8
-\u6b21=\u6b21\u306e\u30da\u30fc\u30b8
+L\u524d=\u524d\u306e\u30da\u30fc\u30b8
+L\u6b21=\u6b21\u306e\u30da\u30fc\u30b8
 
+L\u30b5\u30a4\u30c8\u30bf\u30a4\u30c8\u30eb=\u6574\u4f53\u7528\u30ab\u30eb\u30c6
 
 CustomerinformationCreated=Customerinformation was successfully created.
 CustomerinformationUpdated=Customerinformation was successfully updated.
 CustomerinformationDeleted=Customerinformation was successfully deleted.
-CreateCustomerinformationTitle=Create New Customerinformation
-CreateCustomerinformationSaveLink=Save
+CreateCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u8ffd\u52a0
+CreateCustomerinformationSaveLink=\u8ffd\u52a0\u3059\u308b
 CreateCustomerinformationShowAllLink=Show All Customerinformation Items
 CreateCustomerinformationIndexLink=Index
+L\u9867\u5ba2\u60c5\u5831ID=\u9867\u5ba2\u60c5\u5831ID
+L\u521d\u8a3a\u65e5\u4ed8=\u521d\u8a3a\u65e5\u4ed8
+L\u7d39\u4ecb\u8005=\u7d39\u4ecb\u8005
+L\u7d39\u4ecb\u8005\u3068\u306e\u95a2\u4fc2=\u7d39\u4ecb\u8005\u3068\u306e\u95a2\u4fc2
+L\u65e2\u5f80\u75c7=\u65e2\u5f80\u75c7
+L\u5bb6\u65cf\u69cb\u6210=\u5bb6\u65cf\u69cb\u6210
+L\u5bb6\u65cf\u75c5\u6b74=\u5bb6\u65cf\u75c5\u6b74
+L\u8077\u7a2e=\u8077\u7a2e
+L\u98df\u751f\u6d3b=\u98df\u751f\u6d3b
+L\u7761\u7720\u6642\u9593=\u7761\u7720\u6642\u9593
+L\u904b\u52d5=\u904b\u52d5
+L\u55ab\u7159\u98f2\u9152=\u55ab\u7159\u30fb\u98f2\u9152
 CreateCustomerinformationLabel_id=Id:
 CreateCustomerinformationRequiredMessage_id=The Id field is required.
 CreateCustomerinformationTitle_id=Id
@@ -52,8 +65,8 @@ CreateCustomerinformationLabel_exercise=Exercise:
 CreateCustomerinformationTitle_exercise=Exercise
 CreateCustomerinformationLabel_smokingdrinking=Smokingdrinking:
 CreateCustomerinformationTitle_smokingdrinking=Smokingdrinking
-EditCustomerinformationTitle=Edit Customerinformation
-EditCustomerinformationSaveLink=Save
+EditCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u7de8\u96c6
+EditCustomerinformationSaveLink=\u7de8\u96c6\u3059\u308b
 EditCustomerinformationViewLink=View
 EditCustomerinformationShowAllLink=Show All Customerinformation Items
 EditCustomerinformationIndexLink=Index
@@ -97,7 +110,7 @@ EditCustomerinformationLabel_exercise=Exercise:
 EditCustomerinformationTitle_exercise=Exercise
 EditCustomerinformationLabel_smokingdrinking=Smokingdrinking:
 EditCustomerinformationTitle_smokingdrinking=Smokingdrinking
-ViewCustomerinformationTitle=View
+ViewCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u95b2\u89a7
 ViewCustomerinformationDestroyLink=Destroy
 ViewCustomerinformationEditLink=Edit
 ViewCustomerinformationCreateLink=Create New Customerinformation
@@ -137,7 +150,7 @@ ViewCustomerinformationLabel_exercise=Exercise:
 ViewCustomerinformationTitle_exercise=Exercise
 ViewCustomerinformationLabel_smokingdrinking=Smokingdrinking:
 ViewCustomerinformationTitle_smokingdrinking=Smokingdrinking
-ListCustomerinformationTitle=List
+ListCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u4e00\u89a7
 ListCustomerinformationEmpty=(No Customerinformation Items Found)
 ListCustomerinformationDestroyLink=Destroy
 ListCustomerinformationEditLink=Edit
@@ -161,13 +174,23 @@ ListCustomerinformationTitle_eating=Eating
 ListCustomerinformationTitle_sleeping=Sleeping
 ListCustomerinformationTitle_exercise=Exercise
 ListCustomerinformationTitle_smokingdrinking=Smokingdrinking
+
 CustomermasterCreated=Customermaster was successfully created.
 CustomermasterUpdated=Customermaster was successfully updated.
 CustomermasterDeleted=Customermaster was successfully deleted.
-CreateCustomermasterTitle=Create New Customermaster
-CreateCustomermasterSaveLink=Save
+CreateCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u8ffd\u52a0
+CreateCustomermasterSaveLink=\u8ffd\u52a0\u3059\u308b
 CreateCustomermasterShowAllLink=Show All Customermaster Items
 CreateCustomermasterIndexLink=Index
+L\u9867\u5ba2ID=\u9867\u5ba2ID
+L\u6c0f\u540d=\u6c0f\u540d
+L\u3075\u308a\u304c\u306a=\u6c0f\u540d(\u3075\u308a\u304c\u306a)
+L\u6027\u5225=\u6027\u5225
+L\u90f5\u4fbf\u756a\u53f7=\u90f5\u4fbf\u756a\u53f7
+L\u4f4f\u6240=\u4f4f\u6240
+L\u96fb\u8a71\u756a\u53f71=\u96fb\u8a71\u756a\u53f71
+L\u96fb\u8a71\u756a\u53f72=\u96fb\u8a71\u756a\u53f72
+L\u751f\u5e74\u6708\u65e5=\u751f\u5e74\u6708\u65e5
 CreateCustomermasterLabel_id=Id:
 CreateCustomermasterRequiredMessage_id=The Id field is required.
 CreateCustomermasterTitle_id=Id
@@ -201,8 +224,8 @@ CreateCustomermasterLabel_birthday=Birthday:
 CreateCustomermasterTitle_birthday=Birthday
 CreateCustomermasterLabel_customerinformationid=Customerinformationid:
 CreateCustomermasterTitle_customerinformationid=Customerinformationid
-EditCustomermasterTitle=Edit Customermaster
-EditCustomermasterSaveLink=Save
+EditCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u7de8\u96c6
+EditCustomermasterSaveLink=\u7de8\u96c6\u3059\u308b
 EditCustomermasterViewLink=View
 EditCustomermasterShowAllLink=Show All Customermaster Items
 EditCustomermasterIndexLink=Index
@@ -239,7 +262,7 @@ EditCustomermasterLabel_birthday=Birthday:
 EditCustomermasterTitle_birthday=Birthday
 EditCustomermasterLabel_customerinformationid=Customerinformationid:
 EditCustomermasterTitle_customerinformationid=Customerinformationid
-ViewCustomermasterTitle=View
+ViewCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u95b2\u89a7
 ViewCustomermasterDestroyLink=Destroy
 ViewCustomermasterEditLink=Edit
 ViewCustomermasterCreateLink=Create New Customermaster
@@ -273,7 +296,7 @@ ViewCustomermasterLabel_birthday=Birthday:
 ViewCustomermasterTitle_birthday=Birthday
 ViewCustomermasterLabel_customerinformationid=Customerinformationid:
 ViewCustomermasterTitle_customerinformationid=Customerinformationid
-ListCustomermasterTitle=List
+ListCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u4e00\u89a7
 ListCustomermasterEmpty=(No Customermaster Items Found)
 ListCustomermasterDestroyLink=Destroy
 ListCustomermasterEditLink=Edit
@@ -294,13 +317,24 @@ ListCustomermasterTitle_phonenumber1=Phonenumber1
 ListCustomermasterTitle_phonenumber2=Phonenumber2
 ListCustomermasterTitle_birthday=Birthday
 ListCustomermasterTitle_customerinformationid=Customerinformationid
+
 TreatmentCreated=Treatment was successfully created.
 TreatmentUpdated=Treatment was successfully updated.
 TreatmentDeleted=Treatment was successfully deleted.
-CreateTreatmentTitle=Create New Treatment
-CreateTreatmentSaveLink=Save
+CreateTreatmentTitle=\u65bd\u8853\u60c5\u5831\u8ffd\u52a0
+CreateTreatmentSaveLink=\u8ffd\u52a0\u3059\u308b
 CreateTreatmentShowAllLink=Show All Treatment Items
 CreateTreatmentIndexLink=Index
+L\u65bd\u8853ID=\u65bd\u8853ID
+L\u65bd\u8853\u65e5=\u65bd\u8853\u65e5
+L\u4e3b\u8a34=\u4e3b\u8a34
+L\u8a3a\u5bdf=\u8a3a\u5bdf
+L\u65bd\u8853=\u65bd\u8853
+L\u65bd\u8853\u7d50\u679c=\u65bd\u8853\u7d50\u679c
+L\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u6709\u7121=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u6709\u7121
+L\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u540d=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u540d
+L\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u30c7\u30fc\u30bf=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u30c7\u30fc\u30bf
+
 CreateTreatmentLabel_id=Id:
 CreateTreatmentRequiredMessage_id=The Id field is required.
 CreateTreatmentTitle_id=Id
@@ -335,8 +369,8 @@ CreateTreatmentLabel_attachedfilename=Attachedfilename:
 CreateTreatmentTitle_attachedfilename=Attachedfilename
 CreateTreatmentLabel_attachedfiledata=Attachedfiledata:
 CreateTreatmentTitle_attachedfiledata=Attachedfiledata
-EditTreatmentTitle=Edit Treatment
-EditTreatmentSaveLink=Save
+EditTreatmentTitle=\u65bd\u8853\u60c5\u5831\u7de8\u96c6
+EditTreatmentSaveLink=\u7de8\u96c6\u3059\u308b
 EditTreatmentViewLink=View
 EditTreatmentShowAllLink=Show All Treatment Items
 EditTreatmentIndexLink=Index
@@ -374,7 +408,7 @@ EditTreatmentLabel_attachedfilename=Attachedfilename:
 EditTreatmentTitle_attachedfilename=Attachedfilename
 EditTreatmentLabel_attachedfiledata=Attachedfiledata:
 EditTreatmentTitle_attachedfiledata=Attachedfiledata
-ViewTreatmentTitle=View
+ViewTreatmentTitle=\u65bd\u8853\u60c5\u5831\u95b2\u89a7
 ViewTreatmentDestroyLink=Destroy
 ViewTreatmentEditLink=Edit
 ViewTreatmentCreateLink=Create New Treatment
@@ -408,7 +442,7 @@ ViewTreatmentLabel_attachedfilename=Attachedfilename:
 ViewTreatmentTitle_attachedfilename=Attachedfilename
 ViewTreatmentLabel_attachedfiledata=Attachedfiledata:
 ViewTreatmentTitle_attachedfiledata=Attachedfiledata
-ListTreatmentTitle=List
+ListTreatmentTitle=\u65bd\u8853\u60c5\u5831\u4e00\u89a7
 ListTreatmentEmpty=(No Treatment Items Found)
 ListTreatmentDestroyLink=Destroy
 ListTreatmentEditLink=Edit
