顧客情報登録

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -29,7 +29,7 @@ CreateCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u8ffd\u52a0
 EditCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u7de8\u96c6
 ViewCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u95b2\u89a7
 ListCustomerinformationTitle=\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u4e00\u89a7
-ListCustomerinformationEmpty=(No Customerinformation Items Found)
+ListCustomerinformationEmpty=(\u9867\u5ba2\u88dc\u8db3\u60c5\u5831\u304c\u3042\u308a\u307e\u305b\u3093)
 L\u9867\u5ba2\u60c5\u5831ID=\u9867\u5ba2\u60c5\u5831ID
 L\u521d\u8a3a\u65e5\u4ed8=\u521d\u8a3a\u65e5\u4ed8
 L\u7d39\u4ecb\u8005=\u7d39\u4ecb\u8005
@@ -50,7 +50,7 @@ CreateCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u8ffd\u52a0
 EditCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u7de8\u96c6
 ViewCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u95b2\u89a7
 ListCustomermasterTitle=\u9867\u5ba2\u60c5\u5831\u4e00\u89a7
-ListCustomermasterEmpty=(No Customermaster Items Found)
+ListCustomermasterEmpty=(\u9867\u5ba2\u60c5\u5831\u304c\u3042\u308a\u307e\u305b\u3093)
 L\u9867\u5ba2ID=\u9867\u5ba2ID
 L\u6c0f\u540d=\u6c0f\u540d
 L\u3075\u308a\u304c\u306a=\u6c0f\u540d(\u3075\u308a\u304c\u306a)
@@ -68,7 +68,7 @@ CreateTreatmentTitle=\u65bd\u8853\u60c5\u5831\u8ffd\u52a0
 EditTreatmentTitle=\u65bd\u8853\u60c5\u5831\u7de8\u96c6
 ViewTreatmentTitle=\u65bd\u8853\u60c5\u5831\u95b2\u89a7
 ListTreatmentTitle=\u65bd\u8853\u60c5\u5831\u4e00\u89a7
-ListTreatmentEmpty=(No Treatment Items Found)
+ListTreatmentEmpty=(\u65bd\u8853\u60c5\u5831\u304c\u3042\u308a\u307e\u305b\u3093)
 L\u65bd\u8853ID=\u65bd\u8853ID
 L\u65bd\u8853\u65e5=\u65bd\u8853\u65e5
 L\u4e3b\u8a34=\u4e3b\u8a34
