--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -75,6 +75,7 @@ L\u4e3b\u8a34=\u4e3b\u8a34
 L\u8a3a\u5bdf=\u8a3a\u5bdf
 L\u65bd\u8853=\u65bd\u8853
 L\u65bd\u8853\u7d50\u679c=\u65bd\u8853\u7d50\u679c
+L\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb
 L\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u6709\u7121=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u6709\u7121
 L\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u540d=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u540d
 L\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u30c7\u30fc\u30bf=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u30c7\u30fc\u30bf
